--- a/movie_lens_data_procc/analyse.ipynb
+++ b/movie_lens_data_procc/analyse.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "32b26f92",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e41db137",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "4       1       32     5.0  943228858"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "571455cc",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4      34     2174        weird  1249808102"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "0e9034e6",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
        "4                                       Comedy  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "2d99a2fa",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "d76d59e4",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "b87a8a3d",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "e953d097",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "4       [13, 15, 16]  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,16 +487,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f3d437c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from scipy.sparse import csr_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "27034f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ejemplo de ratings normalizados:\n",
+      "   userId  movieId  rating  rating_normalizado\n",
+      "0       1       17     4.0            0.468085\n",
+      "1       1       25     1.0           -2.531915\n",
+      "2       1       29     2.0           -1.531915\n",
+      "3       1       30     5.0            1.468085\n",
+      "4       1       32     5.0            1.468085\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Normalización de ratings (centrada por usuario)\n",
+    "# Calculamos el promedio de rating de cada usuario\n",
+    "promedios_usuario = dataframe_ratings_con_genres.groupby('userId')['rating'].transform('mean')\n",
+    "\n",
+    "# Creamos una nueva columna con ratings normalizados\n",
+    "dataframe_ratings_con_genres['rating_normalizado'] = dataframe_ratings_con_genres['rating'] - promedios_usuario\n",
+    "\n",
+    "# Mostrar ejemplo de normalización\n",
+    "print(\"\\nEjemplo de ratings normalizados:\")\n",
+    "print(dataframe_ratings_con_genres[['userId', 'movieId', 'rating', 'rating_normalizado']].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bd6484fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Matriz dispersa creada correctamente.\n",
+      "Forma: 200948 usuarios x 84432 películas\n",
+      "Porcentaje de celdas ocupadas: 0.188609%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generación de matriz usuario–película en formato disperso (sparse)\n",
+    "# Convertimos los IDs a índices numéricos para construir la matriz\n",
+    "user_codes = dataframe_ratings_con_genres['userId'].astype('category').cat.codes\n",
+    "movie_codes = dataframe_ratings_con_genres['movieId'].astype('category').cat.codes\n",
+    "\n",
+    "# Creamos la matriz dispersa usando los ratings normalizados\n",
+    "matriz_dispersa = csr_matrix((\n",
+    "    dataframe_ratings_con_genres['rating_normalizado'],\n",
+    "    (user_codes, movie_codes)\n",
+    "))\n",
+    "\n",
+    "# Mostramos la información de la matriz dispersa\n",
+    "print(\"\\nMatriz dispersa creada correctamente.\")\n",
+    "print(f\"Forma: {matriz_dispersa.shape[0]} usuarios x {matriz_dispersa.shape[1]} películas\")\n",
+    "print(f\"Porcentaje de celdas ocupadas: {matriz_dispersa.nnz / (matriz_dispersa.shape[0]*matriz_dispersa.shape[1])*100:.6f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "58c40a84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Matriz de ejemplo (para incluir en el informe):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>movieId</th>\n",
+       "      <th>17</th>\n",
+       "      <th>25</th>\n",
+       "      <th>29</th>\n",
+       "      <th>30</th>\n",
+       "      <th>32</th>\n",
+       "      <th>34</th>\n",
+       "      <th>36</th>\n",
+       "      <th>80</th>\n",
+       "      <th>110</th>\n",
+       "      <th>111</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>userId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.468085</td>\n",
+       "      <td>-2.531915</td>\n",
+       "      <td>-1.531915</td>\n",
+       "      <td>1.468085</td>\n",
+       "      <td>1.468085</td>\n",
+       "      <td>-1.531915</td>\n",
+       "      <td>-2.531915</td>\n",
+       "      <td>1.468085</td>\n",
+       "      <td>-0.531915</td>\n",
+       "      <td>1.468085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>0.730769</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.411565</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>1.411565</td>\n",
+       "      <td>—</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>—</td>\n",
+       "      <td>0.727273</td>\n",
+       "      <td>—</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "movieId       17        25        29        30        32        34        36   \\\n",
+       "userId                                                                          \n",
+       "1        0.468085 -2.531915 -1.531915  1.468085  1.468085 -1.531915 -2.531915   \n",
+       "2               —         —         —         —         —  0.730769         —   \n",
+       "3        1.411565         —         —         —         —         —         —   \n",
+       "5               —         —         —         —         —         —         —   \n",
+       "\n",
+       "movieId       80        110       111  \n",
+       "userId                                 \n",
+       "1        1.468085 -0.531915  1.468085  \n",
+       "2               —         —         —  \n",
+       "3               —  1.411565         —  \n",
+       "5               —  0.727273         —  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Generar versión reducida (Para mostrar a modo de ejemplo)\n",
+    "# Seleccionamos una muestra pequeña de usuarios y películas\n",
+    "usuarios_muestra = dataframe_ratings_con_genres['userId'].drop_duplicates().head(5)\n",
+    "peliculas_muestra = dataframe_ratings_con_genres['movieId'].drop_duplicates().head(10)\n",
+    "\n",
+    "# Creamos una matriz pequeña con pivot_table (solo para mostrar)\n",
+    "matriz_muestra = dataframe_ratings_con_genres[\n",
+    "    dataframe_ratings_con_genres['userId'].isin(usuarios_muestra) &\n",
+    "    dataframe_ratings_con_genres['movieId'].isin(peliculas_muestra)\n",
+    "].pivot_table(\n",
+    "    index='userId',\n",
+    "    columns='movieId',\n",
+    "    values='rating_normalizado'\n",
+    ").fillna('—')\n",
+    "\n",
+    "print(\"\\nMatriz de ejemplo (para incluir en el informe):\")\n",
+    "display(matriz_muestra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e495b6b",
+   "metadata": {},
+   "source": [
+    "### GUARDAR MATRIZ DISPERSA PARA USO FUTURO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07cfd453",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Matriz dispersa guardada correctamente en 'matriz_usuario_pelicula.npz'.\n",
+      "Mapas de índices guardados (usuarios y películas).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.sparse import save_npz, load_npz\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Guardar la matriz dispersa en formato .npz\n",
+    "save_npz(\"matriz_usuario_pelicula.npz\", matriz_dispersa)\n",
+    "print(\"\\nMatriz dispersa guardada correctamente en 'matriz_usuario_pelicula.npz'.\")\n",
+    "\n",
+    "# Guardar también el mapeo entre códigos e IDs reales\n",
+    "usuarios = dataframe_ratings_con_genres['userId'].astype('category')\n",
+    "peliculas = dataframe_ratings_con_genres['movieId'].astype('category')\n",
+    "\n",
+    "usuarios_index = pd.DataFrame({\n",
+    "    'user_index': range(len(usuarios.cat.categories)),\n",
+    "    'userId': usuarios.cat.categories\n",
+    "})\n",
+    "peliculas_index = pd.DataFrame({\n",
+    "    'movie_index': range(len(peliculas.cat.categories)),\n",
+    "    'movieId': peliculas.cat.categories\n",
+    "})\n",
+    "\n",
+    "usuarios_index.to_csv(\"mapa_usuarios.csv\", index=False)\n",
+    "peliculas_index.to_csv(\"mapa_peliculas.csv\", index=False)\n",
+    "print(\"Mapas de índices guardados (usuarios y películas).\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
